crates/nash-can/src/snapshots/nash_can__module__tests__record_literal_ambiguous_error.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\ntype alias first = { x : unit }\ntype alias second = { x : unit }\nvalue = { x = () }\n"
---
[
    RecordLiteralAmbiguous {
        region: Region {
            start: Position {
                line: 4,
                column: 9,
            },
            end: Position {
                line: 4,
                column: 19,
            },
        },
        candidates: [
            QualifiedName {
                home: ModuleName {
                    package: None,
                    name: "Main",
                },
                name: "first",
            },
            QualifiedName {
                home: ModuleName {
                    package: None,
                    name: "Main",
                },
                name: "second",
            },
        ],
    },
]
