crates/nash-can/src/snapshots/nash_can__module__tests__record_literal_fields_in_wire_order.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\ntype alias point = { z : unit, a : unit }\nvalue = { a = (), z = () }\n"
---
Module {
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 1,
                    },
                    end: Position {
                        line: 3,
                        column: 6,
                    },
                },
                value: "value",
            },
            args: [],
            body: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 9,
                    },
                    end: Position {
                        line: 3,
                        column: 27,
                    },
                },
                value: Record {
                    alias: QualifiedName {
                        home: ModuleName {
                            package: None,
                            name: "Main",
                        },
                        name: "point",
                    },
                    annotation: Annotation {
                        context: [],
                        free_vars: [],
                        typ: Located {
                            region: Region {
                                start: Position {
                                    line: 0,
                                    column: 0,
                                },
                                end: Position {
                                    line: 0,
                                    column: 0,
                                },
                            },
                            value: Lambda {
                                from: Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 26,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 30,
                                        },
                                    },
                                    value: Unit,
                                },
                                to: Located {
                                    region: Region {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                    },
                                    value: Lambda {
                                        from: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 2,
                                                    column: 36,
                                                },
                                                end: Position {
                                                    line: 2,
                                                    column: 40,
                                                },
                                            },
                                            value: Unit,
                                        },
                                        to: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 0,
                                                    column: 0,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 0,
                                                },
                                            },
                                            value: Alias {
                                                reference: QualifiedName {
                                                    home: ModuleName {
                                                        package: None,
                                                        name: "Main",
                                                    },
                                                    name: "point",
                                                },
                                                arguments: [],
                                                remaining: [],
                                                target: Open(
                                                    Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 2,
                                                                column: 20,
                                                            },
                                                            end: Position {
                                                                line: 2,
                                                                column: 42,
                                                            },
                                                        },
                                                        value: Record {
                                                            fields: [
                                                                FieldType {
                                                                    index: 1,
                                                                    field: "a",
                                                                    typ: Located {
                                                                        region: Region {
                                                                            start: Position {
                                                                                line: 2,
                                                                                column: 36,
                                                                            },
                                                                            end: Position {
                                                                                line: 2,
                                                                                column: 40,
                                                                            },
                                                                        },
                                                                        value: Unit,
                                                                    },
                                                                },
                                                                FieldType {
                                                                    index: 0,
                                                                    field: "z",
                                                                    typ: Located {
                                                                        region: Region {
                                                                            start: Position {
                                                                                line: 2,
                                                                                column: 26,
                                                                            },
                                                                            end: Position {
                                                                                line: 2,
                                                                                column: 30,
                                                                            },
                                                                        },
                                                                        value: Unit,
                                                                    },
                                                                },
                                                            ],
                                                        },
                                                    },
                                                ),
                                            },
                                        },
                                    },
                                },
                            },
                        },
                    },
                    fields: [
                        FieldValue {
                            field: Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 19,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 20,
                                    },
                                },
                                value: "z",
                            },
                            value: Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 23,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 25,
                                    },
                                },
                                value: Unit,
                            },
                        },
                        FieldValue {
                            field: Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 11,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 12,
                                    },
                                },
                                value: "a",
                            },
                            value: Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 15,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 17,
                                    },
                                },
                                value: Unit,
                            },
                        },
                    ],
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [
        Located {
            region: Region {
                start: Position {
                    line: 2,
                    column: 1,
                },
                end: Position {
                    line: 3,
                    column: 1,
                },
            },
            value: Alias {
                kind: Type,
                context: [],
                name: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 12,
                        },
                        end: Position {
                            line: 2,
                            column: 17,
                        },
                    },
                    value: "point",
                },
                parameters: [],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 20,
                        },
                        end: Position {
                            line: 2,
                            column: 42,
                        },
                    },
                    value: Record {
                        fields: [
                            FieldType {
                                index: 1,
                                field: "a",
                                typ: Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 36,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 40,
                                        },
                                    },
                                    value: Unit,
                                },
                            },
                            FieldType {
                                index: 0,
                                field: "z",
                                typ: Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 26,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 30,
                                        },
                                    },
                                    value: Unit,
                                },
                            },
                        ],
                    },
                },
            },
        },
    ],
    binops: [],
}
