crates/nash-can/src/snapshots/nash_can__module__tests__record_literal_no_alias_error.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\nvalue = { x = () }\n"
---
[
    RecordLiteralNoAlias {
        region: Region {
            start: Position {
                line: 2,
                column: 9,
            },
            end: Position {
                line: 2,
                column: 19,
            },
        },
        fields: [
            "x",
        ],
    },
]
