crates/nash-can/src/snapshots/nash_can__module__tests__record_multiple_duplicate_fields_all_reported.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias R = { x : Int, x : String, y : Int, y : String }\n"
info: diagnostic
---
nash::names::duplicate_field

  × This record has multiple `x` fields.
   ╭─[src/Main.nash:3:27]
 2 │ 
 3 │ type alias R = { x : Int, x : String, y : Int, y : String }
   ·                  ┬        ┬
   ·                  │        ╰── and another first definition
   ·                  ╰── first definition
   ╰────
  help: Rename one of the definitions.

nash::names::duplicate_field

  × This record has multiple `y` fields.
   ╭─[src/Main.nash:3:48]
 2 │ 
 3 │ type alias R = { x : Int, x : String, y : Int, y : String }
   ·                                       ┬        ┬
   ·                                       │        ╰── and another first definition
   ·                                       ╰── first definition
   ╰────
  help: Rename one of the definitions.
