crates/nash-can/src/snapshots/nash_can__module__tests__record_type_duplicate_field.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias R = { x : Int, x : String }\n"
info: diagnostic
---
nash::names::duplicate_field

  × This record has multiple `x` fields.
   ╭─[src/Main.nash:3:27]
 2 │ 
 3 │ type alias R = { x : Int, x : String }
   ·                  ┬        ┬
   ·                  │        ╰── and another first definition
   ·                  ╰── first definition
   ╰────
  help: Rename one of the definitions.
