crates/nash-can/src/snapshots/nash_can__module__tests__record_type_outside_alias_errors.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\nf : { x : int } -> int\nf r = r.x\n"
info: diagnostic
---
nash::names::record_type_outside_alias

  × This record type needs a name:
   ╭─[src/Main.nash:2:5]
 1 │ module Main exposing (..)
 2 │ f : { x : int } -> int
   ·     ───────────
 3 │ f r = r.x
   ╰────
  help: A record type is only allowed as the direct body of a type alias. Give this
        record a named alias.
