crates/nash-can/src/snapshots/nash_can__module__tests__record_update.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf r = { r | x = 1 }\n"
---
Module {
    tests: [],
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 1,
                    },
                    end: Position {
                        line: 3,
                        column: 2,
                    },
                },
                value: "f",
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 3,
                        },
                        end: Position {
                            line: 3,
                            column: 4,
                        },
                    },
                    value: Var(
                        "r",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 7,
                    },
                    end: Position {
                        line: 3,
                        column: 20,
                    },
                },
                value: Update {
                    record: "r",
                    base: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 9,
                            },
                            end: Position {
                                line: 3,
                                column: 10,
                            },
                        },
                        value: VarLocal(
                            "r",
                        ),
                    },
                    fields: [
                        FieldUpdate {
                            field: Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 13,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 14,
                                    },
                                },
                                value: "x",
                            },
                            value: Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 17,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 18,
                                    },
                                },
                                value: Int(
                                    1,
                                ),
                            },
                        },
                    ],
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
