crates/nash-can/src/snapshots/nash_can__module__tests__recursive_alias_cycle.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias A = B\n\ntype alias B = A\n"
info: diagnostic
---
nash::names::recursive_alias

  × Type alias `A` expands recursively.
   ╭─[src/Main.nash:3:12]
 2 │ 
 3 │ type alias A = B
   ·            ─
 4 │ 
   ╰────
  help:     ┌─────┐
            │    A
            │     ↓
            │    B
            └─────┘

        Convert at least one alias in this cycle to a custom type.
