crates/nash-can/src/snapshots/nash_can__module__tests__recursive_alias_self.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Loop = Loop\n"
info: diagnostic
---
nash::names::recursive_alias

  × Type alias `Loop` expands recursively.
   ╭─[src/Main.nash:3:12]
 2 │ 
 3 │ type alias Loop = Loop
   ·            ────
   ╰────
  help: Use a custom type:

            type Loop =
                Loop
                    Loop
