crates/nash-can/src/snapshots/nash_can__module__tests__recursive_decl_mutual_values.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nx = y\n\ny = x\n"
info: diagnostic
---
nash::names::recursive_decl

  × Value `x` depends on itself.
   ╭─[src/Main.nash:3:1]
 2 │ 
 3 │ x = y
   · ─
 4 │ 
   ╰────
  help:     ┌─────┐
            │    x
            │     ↓
            │    y
            └─────┘

        Break the cycle between these value definitions.
