crates/nash-can/src/snapshots/nash_can__module__tests__recursive_decl_self_reference.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nx = x\n"
info: diagnostic
---
nash::names::recursive_decl

  × Value `x` depends on itself.
   ╭─[src/Main.nash:3:1]
 2 │ 
 3 │ x = x
   · ─
   ╰────
  help:

        Break the cycle between these value definitions.
